fix: make vertical gaps uniform

--- a/site/style.css
+++ b/site/style.css
@@ -80,12 +80,12 @@ main > section {
 
 h1 {
   font-size: 3em;
-  margin-bottom: 0;
+  margin-block: 0;
 }
 
 h2 {
   font-size: 1.5em;
-  margin-bottom: 0;
+  margin-block: 0;
 }
 
 .nametag {
